--- a/menu.html
+++ b/menu.html
@@ -97,7 +97,7 @@
 
 <form class="container">
   
-  <h1 class="m-5 text-center">Order Your favourite food here</h1>
+  <h1 class="m-5 text-center">Order Your favourite food from here</h1>
   <div class="form-row">
     <div class="col-md-6 mb-3">
       <label for="validationDefault01">First name</label>
