--- a/menu.html
+++ b/menu.html
@@ -101,17 +101,20 @@
   <div class="form-row">
     <div class="col-md-6 mb-3">
       <label for="validationDefault01">First name</label>
-      <input type="text" class="form-control" id="validationDefault01" value="" required>
+      <input type="text" class="form-control" id="validationDefault01" value="" 
+      placeholder="Enter Your First Name" required>
     </div>
     <div class="col-md-6 mb-3">
       <label for="validationDefault02">Last name</label>
-      <input type="text" class="form-control" id="validationDefault02" value="" required>
+      <input type="text" class="form-control" id="validationDefault02" value=""
+      placeholder="Enter Your Last Name" required>
     </div>
   </div>
   <div class="form-row">
     <div class="col-md-6 mb-3">
       <label for="validationDefault03">Addres</label>
-      <input type="text" class="form-control" id="validationDefault03" required>
+      <input type="text" class="form-control" id="validationDefault03" 
+      placeholder="Enter Your Full Address" required>
     </div>
     <div class="col-md-3 mb-3">
       <label for="validationDefault04">Choose Food</label>
